# rosdistro-reviewer

./: .gitignore  AGENTS.md  CONTRIBUTING.rst  README.md  README.rst  action.yml  pyproject.toml  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: ci.yaml
doc/: .gitignore  Makefile  conf.py  element_analyzers.rst  index.rst  make.bat
rosdistro_reviewer/: __init__.py  __main__.py  command.py  git_lines.py  review.py  yaml_changes.py  yaml_lines.py
rosdistro_reviewer/element_analyzer/: __init__.py  multidistro.py  rosdep.py  rosdistro.py  yamllint.py
rosdistro_reviewer/submitter/: __init__.py  github.py
rosdistro_reviewer/verb/: review.py
test/: conftest.py  spell_check.words  test_analyze.py  test_copyright_license.py  test_git_lines.py  test_main.py  test_multidistro_checks.py  test_mypy.py  test_review.py  test_rosdep_checks.py  test_rosdistro_checks.py  test_ruff.py  test_spell_check.py  test_submitter_github.py  test_verb_review.py  test_yaml_changes.py  test_yaml_lines.py  test_yamllint_checks.py
test/resources/: simple.yaml
