[metadata]
name = rosdistro-reviewer
version = attr: rosdistro_reviewer.__version__
author_email = Scott K Logan <logans@cottsay.net>
classifiers =
    Development Status :: 3 - Alpjha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Testing
license = Apache License, Version 2.0
description = Automation for analyzing changes to the rosdep database and rosdistro index
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
install_requires =
    GitPython
    unidiff
    PyYAML
packages = find:
zip_safe = true

[options.extras_require]
test =
    flake8
    mypy
    pytest
    scspell3k>=2.2
    types-PyYAML

[options.packages.find]
exclude =
    test
    test.*

[tool:pytest]
junit_suite_name = rosdistro-reviewer
markers =
    flake8
    linter

[options.entry_points]

[flake8]
extend_ignore =
    D100
    D104
import-order-style = google
per-file-ignores =
    test/**: D101,D102,D103,D104,D105,D107
show_source = true

[mypy]
ignore_missing_imports = True

[coverage:run]
source = rosdistro_reviewer
