[metadata]
name = rosdistro-reviewer
version = attr: rosdistro_reviewer.__version__
author_email = Scott K Logan <logans@cottsay.net>
classifiers =
    Development Status :: 3 - Alpjha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Testing
license = Apache License, Version 2.0
description = Automation for analyzing changes to the rosdep database and rosdistro index
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
install_requires =
    colcon-core>=0.17.1
    GitPython
    rosdep
    unidiff
    PyYAML
    yamllint
packages = find:
zip_safe = true

[options.extras_require]
github =
    PyGithub
test =
    flake8
    mypy
    pytest
    scspell3k>=2.2
    types-PyYAML

[options.packages.find]
exclude =
    test
    test.*

[tool:pytest]
junit_suite_name = rosdistro-reviewer
markers =
    flake8
    linter

[options.entry_points]
colcon_core.extension_point =
    rosdistro_reviewer.element_analyzer = rosdistro_reviewer.element_analyzer:ElementAnalyzerExtensionPoint
    rosdistro_reviewer.submitter = rosdistro_reviewer.submitter:ReviewSubmitterExtensionPoint
console_scripts =
    rosdistro-reviewer = rosdistro_reviewer.command:main
rosdistro_reviewer.environment_variable =
    extension_blocklist = colcon_core.extension_point:EXTENSION_BLOCKLIST_ENVIRONMENT_VARIABLE
    github_token = rosdistro_reviewer.submitter.github:GITHUB_TOKEN_ENVIRONMENT_VARIABLE
    home = rosdistro_reviewer.command:HOME_ENVIRONMENT_VARIABLE
    log_level = rosdistro_reviewer.command:LOG_LEVEL_ENVIRONMENT_VARIABLE
rosdistro_reviewer.element_analyzer =
    rosdep = rosdistro_reviewer.element_analyzer.rosdep:RosdepAnalyzer
    yamllint = rosdistro_reviewer.element_analyzer.yamllint:YamllintAnalyzer
rosdistro_reviewer.submitter =
    github = rosdistro_reviewer.submitter.github:GitHubSubmitter

[flake8]
extend_ignore =
    D100
    D104
import-order-style = google
per-file-ignores =
    test/**: D101,D102,D103,D104,D105,D107
show_source = true

[mypy]
ignore_missing_imports = True

[coverage:run]
source = rosdistro_reviewer
