[metadata]
name = rosdistro-reviewer
version = attr: rosdistro_reviewer.__version__
author_email = Scott K Logan <logans@cottsay.net>
url = https://ros-infrastructure.github.io/rosdistro-reviewer/
project_urls =
    GitHub = https://github.com/ros-infrastructure/rosdistro-reviewer/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Testing
license = Apache-2.0
description = Automation for analyzing changes to the rosdep database and rosdistro index
long_description = file: README.rst

[options]
python_requires = >=3.6
install_requires =
    colcon-core>=0.18.0
    GitPython
    rosdep
    unidiff
    PyYAML
    yamllint
packages = find:
zip_safe = true

[options.extras_require]
doc =
    sphinx
    sphinx-rtd-theme
    sphinxcontrib-apidoc
github =
    PyGithub>=2.1.0
test =
    flake8
    flake8-blind-except
    flake8-builtins
    flake8-class-newline
    flake8-comprehensions
    flake8-deprecated
    flake8-import-order
    flake8-quotes
    mypy
    pytest
    scspell3k>=2.2
    types-PyYAML

[options.packages.find]
exclude =
    test
    test.*

[tool:pytest]
junit_suite_name = rosdistro-reviewer
markers =
    flake8
    linter

[options.entry_points]
console_scripts =
    rosdistro-reviewer = rosdistro_reviewer.command:main
rosdistro_reviewer.environment_variable =
    extension_blocklist = colcon_core.extension_point:EXTENSION_BLOCKLIST_ENVIRONMENT_VARIABLE
    github_token = rosdistro_reviewer.submitter.github:GITHUB_TOKEN_ENVIRONMENT_VARIABLE
    home = rosdistro_reviewer.command:HOME_ENVIRONMENT_VARIABLE
    log_level = rosdistro_reviewer.command:LOG_LEVEL_ENVIRONMENT_VARIABLE
rosdistro_reviewer.element_analyzer =
    rosdep = rosdistro_reviewer.element_analyzer.rosdep:RosdepAnalyzer
    yamllint = rosdistro_reviewer.element_analyzer.yamllint:YamllintAnalyzer
rosdistro_reviewer.submitter =
    github = rosdistro_reviewer.submitter.github:GitHubSubmitter

[flake8]
extend_ignore =
    D100
    D104
import-order-style = google
per-file-ignores =
    test/**: D101,D102,D103,D104,D105,D107
show_source = true

[mypy]
ignore_missing_imports = True

[coverage:run]
source = rosdistro_reviewer
